--- a/Service/Dispatch/pom.xml
+++ b/Service/Dispatch/pom.xml
@@ -20,8 +20,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.hzgc.service</groupId>
-            <artifactId>util</artifactId>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
