--- a/Service/DynRepo/pom.xml
+++ b/Service/DynRepo/pom.xml
@@ -53,8 +53,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.hzgc.service</groupId>
-            <artifactId>util</artifactId>
+            <groupId>com.hzgc.common</groupId>
+            <artifactId>common-service</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.hzgc.common</groupId>
