修改合并告警代码

--- a/Cluster/Spark/src/main/resources/sparkJob.properties
+++ b/Cluster/Spark/src/main/resources/sparkJob.properties
@@ -15,6 +15,10 @@ rocketmq.nameserver=
 rocketmq.group.id=FaceGroup
 #####################################
 
+######################################
+alarm.store.switch=false
+#######################################
+
 ########## ftp option ##########
 # ftp account
 ftp.account=admin
@@ -56,11 +60,11 @@ kafka.FaceAddAlarmJob.group.id=FaceAddAlarmJobGroupID
 
 ########## AlarmJob option ##########
 # time interval
-job.Alarm.timeInterval=5
+job.alarm.timeInterval=5
 # app name
 job.alarm.appName=FaceAlarmJob
 # group id
-kafka.FaceAlarmJob.group.id=FaceAlarmJobGroup
+kafka.faceAlarmJob.group.id=FaceAlarmJobGroup
 ########################################
 
 ########## offline alarm ##########
