--- a/Service/Visual/src/main/resources/application.properties
+++ b/Service/Visual/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 logging.config=classpath:logback-${spring.profiles.active}.xml
 
 # oauth2 resource server config
-security.ignored=/v2/api-docs,/swagger-resources/**,/swagger-ui.html**,/webjars/**, /internal/**,/**
+security.ignored=/v2/api-docs,/swagger-resources/**,/swagger-ui.html**,/webjars/**, /internal/**
 security.oauth2.resource.loadBalanced=true
 security.oauth2.resource.filter-order=3
 security.oauth2.resource.prefer-token-info=false
