--- a/FaceCompare/Worker/src/main/resources/worker.properties
+++ b/FaceCompare/Worker/src/main/resources/worker.properties
@@ -29,33 +29,23 @@ worker.file.time.out=
 worker.file.check.time=1800000
 #写HBase任务的时间间隔
 worker.hbase.write.time=2000
-#数据持久化方案（一个文件保存几天的数据）
-worker.file.save.program=1
 #文件保存路径
 worker.file.path=test
 #文件保存大小
 worker.file.size=
-#项目启动时，加载多少天的数据到内存中
-worker.load.data.days=90
 #文件流过期时间
 worker.stream.time.out=2
 #数据持久化的文件系统 0 本地  1 HDFS
 worker.file.save.system=0
-#worker绑定本地端口
-worker.port=8888
-
-worker.readfiles_per_thread
 
 worker.address=localhost
 worker.rpc.port=8889
-
+worker.readfiles_per_thread=2
 worker.executors.to.compare=10
 worker.executors.to.loadfile=15
-
+#持久化触发方式 0 定期触发  1定量触发
+worker.flush.program=0
 worker.id=1
-
-#目录根路径
-root.path=D:/test
 
 #是否删除过期文件
 delete.open=1
