--- a/FaceCompare/pom.xml
+++ b/FaceCompare/pom.xml
@@ -7,7 +7,8 @@
         <groupId>com.hzgc</groupId>
         <version>2.3.0</version>
     </parent>
-     <modelVersion>4.0.0</modelVersion>
+    <version>1.0</version>
+    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>face-compare</artifactId>
     <packaging>pom</packaging>
