--- a/FaceCompare/Worker/pom.xml
+++ b/FaceCompare/Worker/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>face-compare</artifactId>
         <groupId>com.hzgc</groupId>
-        <version>2.3.0</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,8 +21,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.hzgc.compare</groupId>
-            <artifactId>facecompare-api</artifactId>
+            <groupId>com.hzgc.face-compare</groupId>
+            <artifactId>api</artifactId>
             <version>1.0</version>
             <optional>true</optional>
         </dependency>
