--- a/FaceCompare/pom.xml
+++ b/FaceCompare/pom.xml
@@ -9,10 +9,12 @@
     </parent>
      <modelVersion>4.0.0</modelVersion>
 
+    <version>1.0</version>
     <artifactId>face-compare</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>Client</module>
         <module>Worker</module>
+        <module>Api</module>
     </modules>
 </project>
