--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>StaRepoService</module>
         <module>Distribution</module>
         <module>FaceCompare</module>
+        <module>Deployment</module>
     </modules>
 
     <properties>
