--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
         <reflections.version>0.9.10</reflections.version>
         <bigdata-common.version>1.0</bigdata-common.version>
         <es.spark.version>6.2.4</es.spark.version>
+        <lombok.version>1.16.18</lombok.version>
+        <junit.version>4.12</junit.version>
+        <swagger.version>2.8.0</swagger.version>
     </properties>
 
 
@@ -53,23 +56,23 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.18</version>
+                <version>${lombok.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
-                <version>2.8.0</version>
+                <version>${swagger.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
-                <version>2.8.0</version>
+                <version>${swagger.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
