--- a/Distribution/pom.xml
+++ b/Distribution/pom.xml
@@ -35,6 +35,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <finalName>GoSunBigData</finalName>
+        <finalName>GoSunBigDataDeploy</finalName>
     </build>
 </project>
