--- a/Service/StaRepo/src/main/resources/application-dev.properties
+++ b/Service/StaRepo/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-##### Spring Cloud 相关配置 #####
+##### 服务相关配置 #####
 eureka.client.serviceUrl.defaultZone=http://172.18.18.40:9000/eureka/
 server.port=7776
 spring.application.name=staRepo
@@ -10,29 +10,42 @@ eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 spring.cloud.config.enabled=false
 ################################
 
-##### 连接池相关配置 #####
-phoenix.enable=true
-phoenix.url=jdbc:phoenix:172.18.18.105:2181
-phoenix.type=com.alibaba.druid.pool.DruidDataSource
-phoenix.driver-class-name=org.apache.phoenix.jdbc.PhoenixDriver
-# phoenix的用户名默认为空
-phoenix.username=
-# phoenix的密码默认为空
-phoenix.password=
-phoenix.default-auto-commit=true
-########################
+##### 权限相关配置 #####
+security.ignored=/v2/api-docs,/swagger-resources/**,/swagger-ui.html**,/webjars/**, /internal/**,/**
+security.oauth2.resource.loadBalanced=true
+security.oauth2.resource.filter-order=3
+security.oauth2.resource.prefer-token-info=false
+security.oauth2.resource.user-info-uri=http://auth-center/user
+################################
 
-##### 静态库相关配置 #####
-static.repo.table.name=objectinfo
-static.repo.table.colfams=person
-static.repo.table.maxversion=1
-#table.timetolive=15768000
+##### 数据库相关配置 #####
+spring.datasource.name=starepo
+spring.datasource.url=jdbc:mysql://172.18.18.105/zhaozhe?useUnicode=true&useSSL=false&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false
+spring.datasource.username=root
+spring.datasource.password=Hzgc@123
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.filter=stat
+spring.datasource.maxActive=20
+spring.datasource.initialSize=1
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPrepareStatements=true
+spring.datasource.maxOpenPreparedStatements=20
+mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.type-aliases-package=com.hzgc.service.starepo.model
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 ########################
 
 ##### kafka相关配置 #####
 bootstrap.servers=172.18.18.105:9092
-request.required.acks=-1
-retries=0
-key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
 ########################
